drawtex: resolve glDrawTexfOES extension function

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=78101
Signed-off-by: Tapani Pälli <tapani.palli@intel.com>
Reviewed-by: Brian Paul <brianp@vmware.com>
Reviewed-by: Ian Romanick <ian.d.romanick@intel.com>